button overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 button {
   font-size: 1rem;
   font-weight: 700;
+  overflow:hidden;
+  text-overflow: ellipsis;
 }
 
 .Dark {
